--- a/style.css
+++ b/style.css
@@ -48,31 +48,62 @@ a {
   margin: 0 auto 3rem auto;
 }
 
-
 /* header導覽列製作 */
-header{
-    width: 100%;
-    height: 60px;
-    /* background-color: gray; */
-    z-index: 999;
-    display: grid;
-    grid-template-columns: 140px minmax(200px,3fr) 50px 50px 20px ;
-    align-content: center;
-    justify-items: center;
-    text-align: center;
+header {
+  width: 100%;
+  height: 60px;
+  /* background-color: gray; */
+  z-index: 999;
+  display: grid;
+  grid-template-columns: 140px minmax(200px, 3fr) 50px 50px 20px;
+  align-content: center;
+  justify-items: center;
+  text-align: center;
 }
 .nav-search,
 .nav-favorite,
-.nav-shoppingcar{
-    font-size: 25px;
-    color: black;
+.nav-shoppingcar {
+  font-size: 25px;
+  color: black;
 }
-.nav-brand{
-    display: flex;
-    align-items: center;
-    color:black;
+.nav-brand {
+  display: flex;
+  align-items: center;
+  color: black;
 }
-.nav-brand img{
-    height: 40px;
-    margin-right:1rem;
+.nav-brand img {
+  height: 40px;
+  margin-right: 1rem;
+}
+
+/* 中間區域 */
+.category {
+  margin-top: 13px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 26px;
+}
+
+.filtercontrol-inner {
+  padding-top: 25px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+.filtercontrol-text {
+  height: 40px;
+  width: 40%;
+  border: 1px solid black;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 700;
+  padding-left: 15px;
+}
+
+@media screen and (min-width: 576px) {
+  .filtercontrol-text {
+    width: 23%;
+  }
 }
