滑鼠事件及banner調整
HTML新增滑鼠事件
RWD總調整

--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
 /* 載入字型 */
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,700&display=swap&subset=chinese-traditional");
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
+
 html,
 body {
   width: 100%;
   height: 100%;
 }
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   background-color: #f6f7f8;
-  font-family: "Noto Sans TC", sans-serif; /* 設定字型 */
+  font-family: "Noto Sans TC", sans-serif;
+  /* 設定字型 */
   font-size: 1rem;
   line-height: 1.4;
   margin: 0;
 }
+
 h1,
 h2,
 h3,
@@ -29,17 +34,22 @@ h5 {
   margin: 0;
   line-height: 0.9;
 }
+
 p {
   margin: 0;
 }
+
 ul,
 li {
-  list-style-type: none; /* 拿掉前方圈圈 */
+  list-style-type: none;
+  /* 拿掉前方圈圈 */
   margin: 0;
   padding: 0;
 }
+
 a {
-  text-decoration: none; /* 拿掉底線 */
+  text-decoration: none;
+  /* 拿掉底線 */
 }
 
 /* 設定區塊寬度一致並置中 */
@@ -55,7 +65,9 @@ header {
   position: fixed;
   z-index: 999;
   background-color: white;
+  opacity: 0.95;
 }
+
 .header-wrapper {
   width: 100%;
   display: grid;
@@ -71,6 +83,7 @@ header {
   grid-column: 2;
   align-items: center;
 }
+
 .img-logo {
   grid-column: 3;
   width: 40px;
@@ -92,10 +105,11 @@ header {
   justify-self: right;
   font-size: 25px;
 }
+
 .icon {
-  margin-left: 10px;
-  margin-right: 20px;
+  margin: 10px;
 }
+
 #search {
   position: absolute;
   left: 40px;
@@ -109,14 +123,17 @@ header {
   text-align: center;
   background-color: white;
 }
+
 .filter-title {
   margin-top: 10px;
   line-height: 30px;
   font-size: 20px;
 }
+
 .section-group {
   padding-top: 10px;
 }
+
 .filter-select {
   width: 40%;
   height: 40px;
@@ -131,20 +148,25 @@ header {
 .show {
   background-color: white;
 }
+
 .card-wrapper {
   display: grid;
-  grid-template-columns: repeat(2 , 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 5px;
 }
+
 .card {
   width: 100%;
 }
+
 .card-model {
   position: relative;
 }
+
 .card-img {
   width: 100%;
 }
+
 .card-icon {
   position: absolute;
   font-size: 25px;
@@ -156,27 +178,50 @@ header {
   border-radius: 50%;
   text-align: center;
 }
+
 .card-info {
   text-align: center;
 }
+.card-img{
+  position: relative;
+}
+.card-hover {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.card:hover .card-hover {
+  opacity: 1;
+}
+
 .card-title {
   font-size: 13px;
   font-family: "M PLUS Rounded 1c",
-  Helvetica,
-  Arial,
-  sans-serif;
+    Helvetica,
+    Arial,
+    sans-serif;
 }
-.card-price{
-    font-size: 13px;
+
+.card-price {
+  font-size: 13px;
 }
-.card-soldout{
+
+.card-soldout {
   font-family: "M PLUS Rounded 1c",
-  Helvetica,
-  Arial,
-  sans-serif;
+    Helvetica,
+    Arial,
+    sans-serif;
   font-size: 13px;
 
 }
+
 .pagination {
   text-align: center;
   background-color: white;
@@ -189,10 +234,11 @@ header {
   width: 100%;
   background-color: white;
 }
+
 .forn {
   position: relative;
   background-image: url(https://assets-lighthouse.alphacamp.co/uploads/image/file/14376/template.png);
-  background-size:  800px 100%;
+  background-size: 800px 100%;
   background-position: center;
   background-repeat: no-repeat;
   height: 230px;
@@ -205,22 +251,27 @@ header {
   font-size: 15px;
   font-weight: 700;
   font-family: "M PLUS Rounded 1c",
-      Helvetica,
-      Arial,
-      sans-serif;
+    Helvetica,
+    Arial,
+    sans-serif;
 }
 
 .forn-group {
+
   margin: 30px;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
 .forn-email {
+  text-align: center;
+    outline: none;
+  height: 3rem;
+  width: 30%;
   border: 0px;
   border-radius: 50px 0 0 50px;
-  height: 50px;
-  width: 3fr;
+  font-size: 1rem;
 }
 
 .forn-btn {
@@ -228,65 +279,87 @@ header {
   background-color: black;
   border: 0px;
   border-radius: 0 50px 50px 0;
-  height: 50px;
+  height: 3rem;
+  width: 15%;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
 }
-.forn-connect{
-    font-family: "M PLUS Rounded 1c",
+
+.forn-connect {
+  font-family: "M PLUS Rounded 1c",
     Helvetica,
     Arial,
     sans-serif;
-    font-size: 13px;
+  font-size: 13px;
 }
-.connect-us{
+
+.connect-us {
   text-decoration: underline;
   color: black;
 
 }
 
-.footer-copyright{
+.footer-copyright {
   text-align: center;
   font-size: 13px;
   font-family: "M PLUS Rounded 1c",
-  Helvetica,
-  Arial,
-  sans-serif;
+    Helvetica,
+    Arial,
+    sans-serif;
   background-color: #F0F0F0;
   height: 30px;
 }
 
 @media screen and (min-width:600px) {
 
-  .filter-select{
+  .filter-select {
     width: 25%;
   }
+
   .card-wrapper {
     grid-template-columns: repeat(3, 1fr);
   }
+
   .forn-title {
     font-size: 18px;
     font-weight: 700;
   }
 }
 
-@media screen and (min-width:960px){
+@media screen and (min-width:960px) {
 
-.nav-list{
-  display: block;
-}
-.fa-search{
-  
-}
-  
-.filter-select {
-  width: 15%;
-}
+  .header-wrapper {
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+
+  .header-brand {
+    grid-column: 1;
+  }
+
+  .nav-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
+
+  #search {
+    all: unset;
+    margin: 10px;
+  }
+
+  .filter-select {
+    width: 15%;
+  }
 
   .card-wrapper {
     grid-template-columns: repeat(4, 1fr);
   }
-.forn{
-    background-size: 80% auto;
 
-}
+  .forn {
+    background-size: 80% auto;
+  }
 
 }
